--- a/index.html
+++ b/index.html
@@ -19,9 +19,18 @@ The reason for this unusual situation relates to a paper I wrote (last revised F
 I actually really like my paper, even though it could certainly be improved. I would like to use the paper as a basis for teaching a course in mathematics.
 
 <p>
-I will tell more of this story as I can.
+My story would be incomplete without an account of the role that my faith in God has played, and continues to play. My faith is an integral part of my life and is especially relevant to this paper and the story behind it.
 
 <p>
+I am naturally a private person, so telling this story is not easy for me. On the other hand, I love learning and want to teach. So, I'll learn to share.
+
+
+<p>
+(writing in progress ...)
+
+<p>
+<p>
+<small>Last revised 4 October 2015</small>
 <p>
 <small>Copyright &copy; 2015 Kevin Cook</small>
 </body>
