--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Welcome to the story of my adventures in graduate school. I am a PhD candidate i
 On Thursday June 4th of this year (2015) at about 11am while running multiple experiments simulating a team of UAVs tracking a ground target, my experiments all crashed together, and I soon realized that I could no longer log in to my computer. 
 
 <p>
-Shortly thereafter, I recieved a phone call from my advisor stating that the chair of the department wanted to speak with me. I was in deep trouble. My computer access to department computers had been suspended. As far as I know, it is still suspended. Amazingly, I am still in the program and am still able to progress towards my degree.
+Shortly thereafter, I received a phone call from my advisor stating that the chair of the department wanted to speak with me. I was in deep trouble. My computer access to department computers had been suspended. As far as I know, it is still suspended. Amazingly, I am still in the program and am still able to progress towards my degree.
 
 <p>
 The reason for this unusual situation relates to a paper I wrote (last revised February 28th) and put on my home page as a working paper: A proof of the inconsistency of ZFC [<a href="doc/not-zfc.pdf">pdf</a>]. Since June 4th, I have not been able to access my home page: http://aml.cs.byu.edu/~kmbcook, and the page has not been publicly accessible. 
@@ -22,15 +22,57 @@ I actually really like my paper, even though it could certainly be improved. I w
 My story would be incomplete without an account of the role that my faith in God has played, and continues to play. My faith is an integral part of my life and is especially relevant to this paper and the story behind it.
 
 <p>
-I am naturally a private person, so telling this story is not easy for me. On the other hand, I love learning and want to teach. So, I'll learn to share.
+I am naturally a private person, so telling this story is not easy for me. On the other hand, I love learning and want to teach. So, I will learn to share.
 
+<p>
+My faith in God is fairly simple. I do believe God lives, that we are His children, and that He plays an active part in our lives whether we believe in Him or not. I am a member of the Church of Jesus Christ of Latter-Day Saints.
+
+<p>
+I also believe that God purposefully allows us the opportunity to choose whether we believe in Him or not. In other words, I believe He withholds from us enough evidence of Him that we may be tempted to choose not to believe the evidence He has given us.  
+
+<p>
+My faith is that I am obligated to serve God, not only because of the life and blessings He has given me but also because of the sacred covenant I have made to serve Him. This is a joyful obligation, in spite of the fact that it is sometimes very difficult.
+
+<p>
+In early 2007 and in answer to prayer regarding my future plans I felt directed to go to BYU. I had already graduated from that school years earlier in 1989. So I pursued it, was accepted and jumped in with both feet.
+
+<p>
+I have always known that God was interested in my life and what I was doing with it. But I also know that He has been particularly interested in my going back to school. During these years in graduate school I have often wondered why this experience is important to Him, and what He wants me to try to make of it.
+
+<p>
+One day in the NLP (natural language processing) lab early on I made an off-hand joke about evolution. I do not remember what I said, but the response surprised me. The response was that my lab partners did not think my joke was very funny. One of them said that the evidence that man evolved was overwhelming. I do not think I responded. I had no idea what to say. I thought it was obvious that the idea that man was created by chance was silly, especially to such a faithful group of people who understood probability as well as they did.
+
+<p>
+I do understand that what I am writing seems utterly ridiculous to many. My intent is certainly not to ridicule the beliefs of others. I am just being frank about my experience.  
+
+<p>
+That experience had a profound impact on me. I began to think about what I might be able to do to help correct what I saw as a serious problem. 
+
+<p>
+Much later I was yet again surprised by my young friends. This time it was about probability. A PhD student for whom I have great respect kindly explained to me something I should have already known about a prevailing current belief in probability theory. To me, the belief was obviously contradictory. I was amazed that he accepted it. 
+
+<p>
+Again, I began to think about what I might be able to do. I became very interested in finding what might be the root cause of what appeared to me to be a contradictory belief. My paper, mentioned at the beginning of this story, is a result of that search. 
+
+<p>
+I have submitted the paper for publication. It was rejected without review. The reason given was that I made a certain assumption which invalidated my argument.
+ I would like to discuss that issue in detail, but not now.
+
+<p>
+At that point I had a decision to make. I could submit to another journal, but would likely run into the same type of roadblock. I figured that the paper would probably not be published until a large number of mathematicians understood and accepted it. I decided to personally contact authorities in mathematics and ask them to look at my paper. It was my contacting people by email which eventually led to the response by my department.
+
+<p>
+I believe that the paper will eventually be understood and accepted. The reason for that belief is my faith in God. I know that God has led me to pursue this paper, and even helped me to write it.   
+
+<p>
+It is not unusual for me to be led and helped by God in all aspects of my life. This is normal for me, even though I make plenty of mistakes and am definitely a work in progress. I know that such a life is normal for many people who choose to put their faith and trust in God.  
 
 <p>
 (writing in progress ...)
 
 <p>
 <p>
-<small>Last revised 4 October 2015</small>
+<small>Last revised 20 October 2015</small>
 <p>
 <small>Copyright &copy; 2015 Kevin Cook</small>
 </body>
