--- a/index.html
+++ b/index.html
@@ -62,17 +62,25 @@ I have submitted the paper for publication. It was rejected without review. The 
 At that point I had a decision to make. I could submit to another journal, but would likely run into the same type of roadblock. I figured that the paper would probably not be published until a large number of mathematicians understood and accepted it. I decided to personally contact authorities in mathematics and ask them to look at my paper. It was my contacting people by email which eventually led to the response by my department.
 
 <p>
-I believe that the paper will eventually be understood and accepted. The reason for that belief is my faith in God. I know that God has led me to pursue this paper, and even helped me to write it.   
+I believe that my paper will be understood and accepted. The reason for that belief is my faith in God. God has led me to pursue this paper, and even helped me to write it. He has power to work miracles.  
 
 <p>
 It is not unusual for me to be led and helped by God in all aspects of my life. This is normal for me, even though I make plenty of mistakes and am definitely a work in progress. I know that such a life is normal for many people who choose to put their faith and trust in God.  
 
 <p>
-(writing in progress ...)
+One thing I am learning in graduate school is how much faith people put in the academic process. I am invested in that process and have already benefited greatly from it. The basic process of reading what others have published, learning, writing, receiving feedback, re-writing, and publishing is a proven vehicle for discovering knowledge.
 
 <p>
+The academic process and its authorities have attracted a great deal of recognition and support. Along with that success comes the temptation to act selfishly, of course. 
+
 <p>
-<small>Last revised 20 October 2015</small>
+Some believe that everyone acts selfishly and that our world progresses on the principle of self-interest. Through my faith I learn that the success and prosperity of the world is upheld by devoted and unselfish service. I aspire to act unselfishly. In order for authorities to avoid the natural tendancy to be self-serving it is necessary for them to self discipline, which can be uncomfortable and therefore neglected.
+
+<p>
+I have personal experience with academic authorities refusing to self discipline. I therefore appeal to those who provide recognition and support. Please hold these authorities accountable. Please request that they disclose information regarding their treatment of me as it pertains to this paper. Please request that they disclose the names and communications of those who opposed my paper being publicly accessible from my BYU academic home page.
+
+<p>
+<small>Last revised 22 October 2015</small>
 <p>
 <small>Copyright &copy; 2015 Kevin Cook</small>
 </body>
