--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ One thing I am learning in graduate school is how much faith people put in the a
 The academic process and its authorities have attracted a great deal of recognition and support. Along with that success comes the temptation to act selfishly, of course. 
 
 <p>
-Some believe that everyone acts selfishly and that our world progresses on the principle of self-interest. Through my faith I learn that the success and prosperity of the world is upheld by devoted and unselfish service. I aspire to act unselfishly. In order for authorities to avoid the natural tendancy to be self-serving it is necessary for them to self discipline, which can be uncomfortable and therefore neglected.
+Some believe that everyone acts selfishly and that our world progresses on the principle of self-interest. Through my faith I learn that the success and prosperity of the world is upheld by devoted and unselfish service. I aspire to act unselfishly. In order for authorities to avoid the natural tendency to be self-serving it is necessary for them to self discipline, which can be uncomfortable and therefore neglected.
 
 <p>
 I have personal experience with academic authorities refusing to self discipline. I therefore appeal to those who provide recognition and support. Please hold these authorities accountable. Please request that they disclose information regarding their treatment of me as it pertains to this paper. Please request that they disclose the names and communications of those who opposed my paper being publicly accessible from my BYU academic home page.
