--- a/index.html
+++ b/index.html
@@ -80,6 +80,18 @@ Some believe that everyone acts selfishly and that our world progresses on the p
 I have personal experience with academic authorities refusing to self discipline. I therefore appeal to those who provide recognition and support. Please hold these authorities accountable. Please request that they disclose information regarding their treatment of me as it pertains to this paper. Please request that they disclose the names and communications of those who opposed my paper being publicly accessible from my BYU academic home page.
 
 <p>
+Why hide? If you are interested in the truth and in teaching the truth then come out in the open. Say who you are and how you think the quest for truth benefited from your actions.
+
+<p>
+Who am I? Certainly flawed, but a person who wants to be good and do good in the world. 
+
+<p>
+I was born in England. My father is English and my mother American, Croatian by lineage. I was raised in Fort Wayne, Indiana. I have one brother and one sister. I am the oldest and we are about seven years apart.
+
+<p>
+(writing in progress ...)
+
+<p>
 <small>Last revised 22 October 2015</small>
 <p>
 <small>Copyright &copy; 2015 Kevin Cook</small>
