--- a/index.html
+++ b/index.html
@@ -89,10 +89,28 @@ Who am I? Certainly flawed, but a person who wants to be good and do good in the
 I was born in England. My father is English and my mother American, Croatian by lineage. I was raised in Fort Wayne, Indiana. I have one brother and one sister. I am the oldest and we are about seven years apart.
 
 <p>
+While I was growing up we lived in four different homes, Lawndale, Curdes, Parker Drive, and Ravinia. My favorite was the home on Parker Drive. Parker Drive was a long winding gravel road along side a river. Our home was on about 4 acres, with a barn and two Shetland ponies. The area for the ponies was surrounded by an electric fence.
+
+<p>
+My brother Colin and I had the basement to ourselves. It was mostly one large room with a hard concrete floor. One of my favorite memories was making little bomb shelters out of legos, taking them to the top of the basement stairs and then throwing them to the basement floor. The objective was to see if we could build a structure which could withstand the impact.
+
+<p>
+We lived in a kids paradise. I doubt that it was a parents paradise. I remember an extended period of time when the well didn't work. During that time we drove to a nearby business to fill large containers with water.   
+
+<p>
+During the blizzard of '78 the city shut down for three days. School shut down for a week. I decided to use that time to hone my fire-making skills.  
+
+
+
+
+
+
+
+<p>
 (writing in progress ...)
 
 <p>
-<small>Last revised 26 October 2015</small>
+<small>Last revised 2 November 2015</small>
 <p>
 <small>Copyright &copy; 2015 Kevin Cook</small>
 </body>
