--- a/index.html
+++ b/index.html
@@ -100,6 +100,14 @@ We lived in a kids paradise. I doubt that it was a parents paradise. I remember 
 <p>
 During the blizzard of '78 the city shut down for three days. School shut down for a week. I decided to use that time to hone my fire-making skills.  
 
+<p>
+My church sponsored a Boy Scout troop. We went on a 50-mile afoot afloat adventure. We canoed for days, drinking in the beauty of the river and engaging the other canoes in battle. At night I was eaten alive by mosquitoes, but that discomfort didn't begin to dampen my enthusiasm.
+
+<p>
+One family vacation we stayed for a week in an old cabin in the backwoods of Kentucky. Before we could use the cabin, spider webs and other traces of animals had to be cleaned out. Mom brought beautiful quilts from home for the beds and cooked on an old wood stove in the center of the cabin.
+
+<p>
+I played endless board games with Dad. The aim of my existence that week was to beat him, but I never did. At one point I broke down and cried after losing a game I had so hoped to win. He didn't like seeing me hurt and asked if he should let me win. I choked down my tears and said something like "No Dad, it's OK. I don't want you to let me win."
 
 
 
@@ -110,7 +118,7 @@ During the blizzard of '78 the city shut down for three days. School shut down f
 (writing in progress ...)
 
 <p>
-<small>Last revised 2 November 2015</small>
+<small>Last revised 3 November 2015</small>
 <p>
 <small>Copyright &copy; 2015 Kevin Cook</small>
 </body>
