--- a/index.html
+++ b/index.html
@@ -109,6 +109,18 @@ One family vacation we stayed for a week in an old cabin in the backwoods of Ken
 <p>
 I played endless board games with Dad. The aim of my existence that week was to beat him, but I never did. At one point I broke down and cried after losing a game I had so hoped to win. He didn't like seeing me hurt and asked if he should let me win. I choked down my tears and said something like "No Dad, it's OK. I don't want you to let me win."
 
+<p>
+I delivered newspapers to a nearby apartment complex. I enjoyed delivering the papers. It was good exercise and I felt good about learning to work. I didn't like collecting money from my customers. I collected enough to pay my bill to the newspaper company and a little extra for myself, but there were many people who got a free newspaper.
+
+<p>
+I attended early morning seminary which helped me to learn and appreciate the scriptures. I felt the love and faith of my teachers, and I grew to love them.
+
+<p>
+I played the trumpet in jazz, concert, and marching bands. We traveled to Daytona Beach in Florida. The rising sun on the ocean was spectacular.
+
+<p>
+I remember my teachers Mr. Bates, Mrs. Zinc, Mr. Wittenberg, Mr. Dvorak, Mr. Ashton and Mrs. Thomson. They instilled within me a love for learning and self-confidence. 
+
 
 
 
@@ -118,7 +130,7 @@ I played endless board games with Dad. The aim of my existence that week was to 
 (writing in progress ...)
 
 <p>
-<small>Last revised 3 November 2015</small>
+<small>Last revised 4 November 2015</small>
 <p>
 <small>Copyright &copy; 2015 Kevin Cook</small>
 </body>
