--- a/index.html
+++ b/index.html
@@ -116,10 +116,19 @@ I delivered newspapers to a nearby apartment complex. I enjoyed delivering the p
 I attended early morning seminary which helped me to learn and appreciate the scriptures. I felt the love and faith of my teachers, and I grew to love them.
 
 <p>
-I played the trumpet in jazz, concert, and marching bands. We traveled to Daytona Beach in Florida. The rising sun on the ocean was spectacular.
+I played the trumpet in jazz and marching bands. We traveled to Daytona Beach in Florida. The rising sun on the ocean was spectacular.
 
 <p>
-I remember my teachers Mr. Bates, Mrs. Zinc, Mr. Wittenberg, Mr. Dvorak, Mr. Ashton and Mrs. Thomson. They instilled within me a love for learning and self-confidence. 
+I remember my teachers Mr. Bates, Mrs. Zinc, Mr. Wittenberg, Mr. Dvorak, Mr. Ashton and Mrs. Thomson. They instilled within me a love for learning and a confidence in my ability to succeed in life. 
+
+<p>
+I did enjoy high school, but when I finished I felt free. Free to pursue a life of challenge and achievement.
+
+<p>
+Both of my parents had gone to BYU. That's how they met. It made perfect sense. I'd go to BYU too, find a beautiful girl, and marry in the temple for time and all eternity. I'd be a dad, gain experience, and learn to become like my Heavenly Father.
+
+<p>
+So off I went, across the country to a parched land with no trees, no mosquitoes, and beckoning mountains.
 
 
 
@@ -130,7 +139,7 @@ I remember my teachers Mr. Bates, Mrs. Zinc, Mr. Wittenberg, Mr. Dvorak, Mr. Ash
 (writing in progress ...)
 
 <p>
-<small>Last revised 4 November 2015</small>
+<small>Last revised 5 November 2015</small>
 <p>
 <small>Copyright &copy; 2015 Kevin Cook</small>
 </body>
