First year at BYU

--- a/index.html
+++ b/index.html
@@ -130,8 +130,17 @@ Both of my parents had gone to BYU. That's how they met. It made perfect sense. 
 <p>
 So off I went, across the country to a parched land with no trees, no mosquitoes, and beckoning mountains.
 
+<p>
+It was difficult to be a responsible adult. I was just starting out, and learning important lessons through hard experience. Surprisingly, my grades were only average. More was being expected of me, and I began to realize that I had wasted opportunity in high school due to my poor attitude toward studying.  
 
+<p>
+I found some awesome friends. We had a great time together.
 
+<p>
+I received my patriarcal blessing from Clyde Sandgren, which inspired me with a powerful vision of what I could become by following the gospel plan.
+
+<p>
+My boyish heart was broken. My friends patiently listened. Time helped cheer me up.
 
 
 
@@ -139,7 +148,7 @@ So off I went, across the country to a parched land with no trees, no mosquitoes
 (writing in progress ...)
 
 <p>
-<small>Last revised 5 November 2015</small>
+<small>Last revised 7 November 2015</small>
 <p>
 <small>Copyright &copy; 2015 Kevin Cook</small>
 </body>
