--- a/index.html
+++ b/index.html
@@ -125,10 +125,7 @@ I remember my teachers Mr. Bates, Mrs. Zinc, Mr. Wittenberg, Mr. Dvorak, Mr. Ash
 I did enjoy high school, but when I finished I felt free. Free to pursue a life of challenge and achievement.
 
 <p>
-Both of my parents had gone to BYU. That's how they met. It made perfect sense. I'd go to BYU too, find a beautiful girl, and marry in the temple for time and all eternity. I'd be a dad, gain experience, and learn to become like my Heavenly Father.
-
-<p>
-So off I went, across the country to a parched land with no trees, no mosquitoes, and beckoning mountains.
+Both of my parents had gone to BYU. That's how they met. It made perfect sense. I'd go to BYU too, find a beautiful girl, and marry in the temple for time and all eternity. I'd be a dad, gain experience, and learn to become like my Heavenly Father. So off I went, across the country to a parched land with no trees, no mosquitoes, and beckoning mountains.
 
 <p>
 It was difficult to be a responsible adult. I was just starting out, and learning important lessons through hard experience. Surprisingly, my grades were only average. More was being expected of me, and I began to realize that I had wasted opportunity in high school due to my poor attitude toward studying.  
@@ -142,13 +139,23 @@ I received my patriarcal blessing from Clyde Sandgren, which inspired me with a 
 <p>
 My boyish heart was broken. My friends patiently listened. Time helped cheer me up.
 
+<p>
+At the end of the academic year, it was time to return home to Indiana. The first order of business was to earn money for a mission. I got hired by a landscaping company, but couldn't actually work for the first two weeks due to heavy rain. But I was determined to work. So I decided to start a television repair business, to pursue when I wasn't landscaping.
+
+<p>
+Mostly, I just replaced worn out vacuum tubes. But there were other problems. One in particular stumped me. The main fuse was blown. After replacing it, the new fuse blew immediately. I had no training in electronics, and no idea what I was doing, so I decided to wrap the blown fuse in tin foil. KA-POW! That was exciting, and distressing. Obviously there had been something else wrong, causing the fuse to blow. Unfortunately, the TV was now dead as a doornail.
+
+<p>
+After a year and a half I didn't have much money for a mission. I had some expensive TV repair equipment, which I planned to use afterwards. My father realized what was happening and decided to charge me a little each month for rent. Without saying anything, he saved that money for me. When it was time to serve the Lord as a missionary, my dad let me know what he had done. I would have enough.
+
+
 
 
 <p>
 (writing in progress ...)
 
 <p>
-<small>Last revised 7 November 2015</small>
+<small>Last revised 9 November 2015</small>
 <p>
 <small>Copyright &copy; 2015 Kevin Cook</small>
 </body>
