--- a/index.html
+++ b/index.html
@@ -143,10 +143,19 @@ My boyish heart was broken. My friends patiently listened. Time helped cheer me 
 At the end of the academic year, it was time to return home to Indiana. The first order of business was to earn money for a mission. I got hired by a landscaping company, but couldn't actually work for the first two weeks due to heavy rain. But I was determined to work. So I decided to start a television repair business, to pursue when I wasn't landscaping.
 
 <p>
-Mostly, I just replaced worn out vacuum tubes. But there were other problems. One in particular stumped me. The main fuse was blown. After replacing it, the new fuse blew immediately. I had no training in electronics, and no idea what I was doing, so I decided to wrap the blown fuse in tin foil. KA-POW! That was exciting, and distressing. Obviously there had been something else wrong, causing the fuse to blow. Unfortunately, the TV was now dead as a doornail.
+Mostly I just replaced worn out vacuum tubes, but there were other problems. One in particular stumped me. The main fuse was blown. After replacing it, the new fuse blew immediately. I had no training in electronics, and no idea what I was doing, so I decided to wrap the blown fuse in tin foil. KA-POW! That was exciting, and distressing. Obviously there had been something else wrong, causing the fuse to blow. Unfortunately, the TV was now dead as a doornail.
 
 <p>
 After a year and a half I didn't have much money for a mission. I had some expensive TV repair equipment, which I planned to use afterwards. My father realized what was happening and decided to charge me a little each month for rent. Without saying anything, he saved that money for me. When it was time to serve the Lord as a missionary, my dad let me know what he had done. I would have enough.
+
+<p>
+I received a call to serve in the Germany Hamburg mission. As part of my preparation I returned to Utah and received my endowment in the Salt Lake temple. 
+
+<p>
+My mission transformed my life. That miracle unfolded through service, service to the Lord and to my neighbor. It was a difficult form of service, difficult to give because it wasn't welcomed. I became a new person because of it, less selfish and more dedicated to the Lord. 
+
+<p>
+Rather than share details of my mission in Germany, I'd like to share a scripture. "And if it so be that you should labor all your days in crying repentance unto this people, and bring, save it be one soul unto me, how great shall be your joy with him in the kingdom of my Father!" (Doctrine and Covenants 18:15)
 
 
 
@@ -155,7 +164,7 @@ After a year and a half I didn't have much money for a mission. I had some expen
 (writing in progress ...)
 
 <p>
-<small>Last revised 9 November 2015</small>
+<small>Last revised 10 November 2015</small>
 <p>
 <small>Copyright &copy; 2015 Kevin Cook</small>
 </body>
