Marriage and family

--- a/index.html
+++ b/index.html
@@ -157,14 +157,17 @@ My mission transformed my life. That miracle unfolded through service, service t
 <p>
 Rather than share details of my mission in Germany, I'd like to share a scripture. "And if it so be that you should labor all your days in crying repentance unto this people, and bring, save it be one soul unto me, how great shall be your joy with him in the kingdom of my Father!" (Doctrine and Covenants 18:15)
 
+<p>
+Following my mission I returned to BYU. I was a new person, but still far from perfect. I would describe this period of my life as a bit painful. I am grateful for the influence of friends from my mission who continued that friendship afterwards. One of those friends and I ran the Saint George marathon together. That was fun.
 
-
+<p>
+I was blessed to marry a bright beautiful girl, my best friend. Together, we were blessed with Devon, Joshua, Lauresa, Brian, Christopher, Adam, Amelia, Samuel, Alison, John, and Michelle. And the blessings continue to come as our children marry and have children of their own. Truly the windows of heaven have been opened and blessings poured out upon us.
 
 <p>
 (writing in progress ...)
 
 <p>
-<small>Last revised 10 November 2015</small>
+<small>Last revised 11 November 2015</small>
 <p>
 <small>Copyright &copy; 2015 Kevin Cook</small>
 </body>
