--- a/index.html
+++ b/index.html
@@ -164,10 +164,16 @@ Following my mission I returned to BYU. I was a new person, but still far from p
 I was blessed to marry a bright beautiful girl, my best friend. Together, we were blessed with Devon, Joshua, Lauresa, Brian, Christopher, Adam, Amelia, Samuel, Alison, John, and Michelle. And the blessings continue to come as our children marry and have children of their own. Truly the windows of heaven have been opened and blessings poured out upon us.
 
 <p>
+While in school, I taught German at the missionary training center and took care of equipment in the electrical engineering shop.   
+
+<p>
+Around the time I graduated in computer and electrical engineering, I decided to venture off on my own. I wanted independence and adventure. There was so much I looked forward to doing and learning. I was brimming with enthusiasm and self-confidence.
+
+<p>
 (writing in progress ...)
 
 <p>
-<small>Last revised 11 November 2015</small>
+<small>Last revised 12 November 2015</small>
 <p>
 <small>Copyright &copy; 2015 Kevin Cook</small>
 </body>
