--- a/index.html
+++ b/index.html
@@ -170,10 +170,16 @@ While in school, I taught German at the missionary training center and took care
 Around the time I graduated in computer and electrical engineering, I decided to venture off on my own. I wanted independence and adventure. There was so much I looked forward to doing and learning. I was brimming with enthusiasm and self-confidence.
 
 <p>
+One of my ambitions was to use computers to help people learn foreign languages, particularly to help with listening comprehension and pronunciation.
+
+<p>
+Most computers at the time lacked sound capabilities. For my senior project I designed and built a sound card together with amplified speaker and enclosure for the IBM PC. 
+
+<p>
 (writing in progress ...)
 
 <p>
-<small>Last revised 12 November 2015</small>
+<small>Last revised 13 November 2015</small>
 <p>
 <small>Copyright &copy; 2015 Kevin Cook</small>
 </body>
