--- a/index.html
+++ b/index.html
@@ -176,10 +176,15 @@ One of my ambitions was to use computers to help people learn foreign languages,
 Most computers at the time lacked sound capabilities. For my senior project I designed and built a sound card together with amplified speaker and enclosure for the IBM PC. 
 
 <p>
+My plan was to start by repairing electronics, and then use my spare time to branch out into other areas, such as developing educational software and whatever else I wanted to do. So I set up shop in our apartment and went to work.
+
+
+
+<p>
 (writing in progress ...)
 
 <p>
-<small>Last revised 13 November 2015</small>
+<small>Last revised 16 November 2015</small>
 <p>
 <small>Copyright &copy; 2015 Kevin Cook</small>
 </body>
