computer monitor repair

--- a/index.html
+++ b/index.html
@@ -178,13 +178,21 @@ Most computers at the time lacked sound capabilities. For my senior project I de
 <p>
 My plan was to start by repairing electronics, and then use my spare time to branch out into other areas, such as developing educational software and whatever else I wanted to do. So I set up shop in our apartment and went to work.
 
+<p>
+My business specialized in computer monitor repair. When a monitor stopped working, I would find the diode, capacitor, or other component that had failed and replace it. Often the problem was a bad solder joint. The cost in materials to fix a monitor was generally very low. The challenge was to quickly find the faulty component, or components. 
+
+<p>
+I learned that time was better spent when I actually understood how a circuit worked. I rarely had a schematic diagram to help. Rather, I studied the layout of the circuit board. This practice of learning how a circuit worked by studying the layout of the board was fairly practical since circuit boards were almost always single-sided.
+
+<p>
+ If I didn't find the root cause of a problem at first, I would need to go back and take a closer look until I found the culprit perpetuating the problem.  
 
 
 <p>
 (writing in progress ...)
 
 <p>
-<small>Last revised 16 November 2015</small>
+<small>Last revised 17 November 2015</small>
 <p>
 <small>Copyright &copy; 2015 Kevin Cook</small>
 </body>
