--- a/index.html
+++ b/index.html
@@ -187,12 +187,15 @@ I learned that time was better spent when I actually understood how a circuit wo
 <p>
  If I didn't find the root cause of a problem at first, I would need to go back and take a closer look until I found the culprit perpetuating the problem.  
 
+<p>
+My family was growing, my business was marginal, spare time was scarce, and money was tight. I began to realize my limitations. Instead of being bouyed up with anticipation for the future I began to be weighed down with failings of the past.  
+
 
 <p>
 (writing in progress ...)
 
 <p>
-<small>Last revised 17 November 2015</small>
+<small>Last revised 18 November 2015</small>
 <p>
 <small>Copyright &copy; 2015 Kevin Cook</small>
 </body>
