--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ I learned that time was better spent when I actually understood how a circuit wo
  If I didn't find the root cause of a problem at first, I would need to go back and take a closer look until I found the culprit perpetuating the problem.  
 
 <p>
-My family was growing, my business was marginal, spare time was scarce, and money was tight. I began to realize my limitations. Instead of being bouyed up with anticipation for the future I began to be weighed down with failings of the past.  
+My family was growing, my business was marginal, spare time was scarce, and money was tight. I began to realize my limitations. Instead of being buoyed up with anticipation for the future I began to be weighed down with failings of the past.  
 
 
 <p>
