Fasting and prayer

--- a/index.html
+++ b/index.html
@@ -190,12 +190,25 @@ I learned that time was better spent when I actually understood how a circuit wo
 <p>
 My family was growing, my business was marginal, spare time was scarce, and money was tight. I began to realize my limitations. Instead of being buoyed up with anticipation for the future I began to be weighed down with failings of the past.  
 
+<p>
+Obviously, things weren't going as planned. At that time I had two small repair shops, one in Provo and the other in Auburn Washington. I thought it would be best to leave my business and join the growing software development market back in Utah.
+
+<p>
+Before making a final decision I counseled with the Lord through fasting and prayer. 
+
+<p>
+Earlier, before starting my business I had done the same. At that time I really wanted to start my own business and essentially asked the Lord for permission. The answer I received was that it would be fine with Him, as long I as lived righteously and kept His commandments. So, I enthusiastically started my business.
+
+<p>
+This time was very different. I asked for counsel regarding my plans to change course. The answer I received was that it would be better for me to stay with my business and discipline myself to run it effectively. I was counseled to pay closer attention to detail and to start work consistently by 8am.
+
+ 
 
 <p>
 (writing in progress ...)
 
 <p>
-<small>Last revised 18 November 2015</small>
+<small>Last revised 19 November 2015</small>
 <p>
 <small>Copyright &copy; 2015 Kevin Cook</small>
 </body>
