--- a/index.html
+++ b/index.html
@@ -202,13 +202,15 @@ Earlier, before starting my business I had done the same. At that time I really 
 <p>
 This time was very different. I asked for counsel regarding my plans to change course. The answer I received was that it would be better for me to stay with my business and discipline myself to run it effectively. I was counseled to pay closer attention to detail and to start work consistently by 8am.
 
- 
+<p>
+So I stayed with my business and put my effort into doing a better job. 
+
 
 <p>
 (writing in progress ...)
 
 <p>
-<small>Last revised 19 November 2015</small>
+<small>Last revised 20 November 2015</small>
 <p>
 <small>Copyright &copy; 2015 Kevin Cook</small>
 </body>
