--- a/index.html
+++ b/index.html
@@ -205,12 +205,34 @@ This time was very different. I asked for counsel regarding my plans to change c
 <p>
 So I stayed with my business and put my effort into doing a better job. 
 
+<p>
+I tried working more. I put more burden on my sweetheart at home. I was negligent fulfilling my responsibilities at church. As scoutmaster, I chose not to go with my troop to summer camp. Though, I did not work on Sunday. Finally, I realized that working too little was not the problem.  
+
+<p>
+I tried working smarter, and saw limited success. Gradually, I was doing a better job. 
+
+<p>
+And I was growing in other ways. I was asked to serve as scoutmaster again, this time back in Utah. Smarting from earlier poor choices, I decided to serve whole-heartedly and felt great about it. My troop helped build Discovery Park in Pleasant Grove.
+
+<p>
+But in spite of improvements my business was a dead end. I could not find a way to get a decent return on the investment of time required to diagnose a failure. There were too many different failures. There were too few monitors with the same failure. And, the cost of a new monitor was consistently falling.  
+
+<p>
+I had tried many times to start work consistently by 8am, but had not actually done it. It had been about seven years since I received that counsel from the Lord. I knew that starting work early was important, but I did not think it was going to solve all my problems. 
+
+<p>
+One Sunday while sitting in church partaking of the sacrament I promised the Lord I would do what He had counseled me to do. I realized that I had been trying harder to do my best than to follow His counsel. During the next few years I wrestled to keep that promise, and eventually did. Keeping my promise to God meant everything to me.
+
+
+
+
+
 
 <p>
 (writing in progress ...)
 
 <p>
-<small>Last revised 20 November 2015</small>
+<small>Last revised 21 November 2015</small>
 <p>
 <small>Copyright &copy; 2015 Kevin Cook</small>
 </body>
