--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ And I was growing in other ways. I was asked to serve as scoutmaster again, this
 But in spite of improvements my business was a dead end. I could not find a way to get a decent return on the investment of time required to diagnose a failure. There were too many different failures. There were too few monitors with the same failure. And, the cost of a new monitor was consistently falling.  
 
 <p>
-I had tried many times to start work consistently by 8am, but had not actually done it. About seven years had passed, since I received that counsel from the Lord. I knew that starting work early was important, but I did not think it was going to solve all my problems. 
+I had tried many times to start work consistently by 8am, but had not actually done it. About seven years had passed, since I received that counsel from the Lord. I knew that starting work early was important, but did not think it was going to solve all my problems. 
 
 <p>
 One Sunday while sitting in church partaking of the sacrament I promised the Lord I would do what He had counseled me to do. I realized that I had been trying harder to do my best than to follow His counsel. During the next few years I wrestled to keep that promise, and eventually did. Keeping my promise to God meant everything to me.
