--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ I tried working smarter, and saw limited success. Gradually, I was doing a bette
 And I was growing in other ways. I was asked to serve as scoutmaster again, this time back in Utah. Smarting from earlier poor choices, I decided to serve whole-heartedly and felt great about it. My troop helped build Discovery Park in Pleasant Grove.
 
 <p>
-But in spite of improvements my business was a dead end. I could not find a way to get a decent return on the investment of time required to diagnose a failure. There were too many different failures. There were too few monitors with the same failure. And, the cost of a new monitor was consistently falling.  
+But in spite of improvements my business was a dead end. I could not find a way to get a decent return on the investment of time required to diagnose a failure. There were too many different failures. There were too few monitors with the same failure. And, the cost of a new monitor was steadily falling.  
 
 <p>
 I had tried many times to start work consistently by 8am, but had not actually done it. About seven years had passed, since I received that counsel from the Lord. I knew that starting work early was important, but did not think it was going to solve all my problems. 
