--- a/index.html
+++ b/index.html
@@ -223,7 +223,8 @@ I had tried many times to start work consistently by 8am, but had not actually d
 <p>
 One Sunday while sitting in church partaking of the sacrament I promised the Lord I would do what He had counseled me to do. I realized that I had been trying harder to do my best than to follow His counsel. During the next few years I wrestled to keep that promise, and eventually did. Keeping my promise to God meant everything to me.
 
-
+<p>
+I learned that it was more important for me to listen to my Heavenly Father than to succeed, more important even than to succeed in doing something good. I realized that by choosing to follow His counsel I had embarked on a spiritual journey to a land which could only be reached with His continued help and direction.
 
 
 
@@ -232,7 +233,7 @@ One Sunday while sitting in church partaking of the sacrament I promised the Lor
 (writing in progress ...)
 
 <p>
-<small>Last revised 21 November 2015</small>
+<small>Last revised 23 November 2015</small>
 <p>
 <small>Copyright &copy; 2015 Kevin Cook</small>
 </body>
