--- a/index.html
+++ b/index.html
@@ -226,14 +226,15 @@ One Sunday while sitting in church partaking of the sacrament I promised the Lor
 <p>
 I learned that it was more important for me to listen to my Heavenly Father than to succeed, more important even than to succeed in doing something good. I realized that by choosing to follow His counsel I had embarked on a spiritual journey to a land which could only be reached with His continued help and direction.
 
-
+<p>
+From the moment I made that promise I was filled with a profound sense of peace and happiness. The Spirit of the Lord whispered to my soul that God was pleased.  
 
 
 <p>
 (writing in progress ...)
 
 <p>
-<small>Last revised 23 November 2015</small>
+<small>Last revised 24 November 2015</small>
 <p>
 <small>Copyright &copy; 2015 Kevin Cook</small>
 </body>
