--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ I tried working more. I put more burden on my sweetheart at home. I was negligen
 I tried working smarter, and saw limited success. Gradually, I was doing a better job. 
 
 <p>
-And I was growing in other ways. I was asked to serve as scoutmaster again, this time back in Utah. Smarting from earlier poor choices, I decided to serve whole-heartedly and felt great about it. My troop helped build Discovery Park in Pleasant Grove.
+And I was growing in other ways. I was asked to serve as scoutmaster again, this time back in Utah. Smarting from earlier poor choices, I decided to serve wholeheartedly and felt great about it. My troop helped build Discovery Park in Pleasant Grove.
 
 <p>
 But in spite of improvements my business was a dead end. I could not find a way to get a decent return on the investment of time required to diagnose a failure. There were too many different failures. There were too few monitors with the same failure. And, the cost of a new monitor was steadily falling.  
@@ -229,12 +229,21 @@ I learned that it was more important for me to listen to my Heavenly Father than
 <p>
 From the moment I made that promise I was filled with a profound sense of peace and happiness. The Spirit of the Lord whispered to my soul that God was pleased.  
 
+<p>
+While fixing monitors I didn't have any free time on my hands, not free time for my hands. My hands were always busy. There were things to take apart, to put back together, to solder, and to un-solder. 
+
+<p>
+But my mind had free time. The challenge was how to take advantage of that opportunity. I wanted to learn Java (the programming language). I figured that I needed to read the language specification. There were other things I also needed to read, such as the scriptures and teachings of the presidents of the church.
+
+<p>
+So I wrote a program to read these things to me aloud, while I worked.
+
 
 <p>
 (writing in progress ...)
 
 <p>
-<small>Last revised 24 November 2015</small>
+<small>Last revised 25 November 2015</small>
 <p>
 <small>Copyright &copy; 2015 Kevin Cook</small>
 </body>
